Changed list height to avoid overlapping on content elements

--- a/Glimmo (Spring MVC)/WebContent/resources/css/navigation.css
+++ b/Glimmo (Spring MVC)/WebContent/resources/css/navigation.css
@@ -5,7 +5,7 @@
 	width:auto;
 	position:relative;
 	display:block;
-	height:40px;
+	height:55px;
 	text-transform:uppercase;
 	font-size:13px;
 	/* is the specified URL is not absolute, it is considered relative to the location of the current CSS file */
